[package]
name = "net_test3"
version = "0.1.0"
authors = ["w"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "*"
futures-preview = "=0.3.0-alpha.18"
slab = "*"
url = "*"
lazy_static = "*"
log = "*"
env_logger = "*"